--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
       <!-- latest news -->
        <section class="mt-[90px]">
           
-              <h1 class="font-bold text-[60px]    max-sm:text-4xl  text-center" >Latest News</h1>
+              <h1 class="font-bold text-[60px]  max-sm:w-[90vw]  max-sm:text-4xl  text-center" >Latest News</h1>
 
 
               <!-- card design -->
-               <div class="flex max-sm:flex-col justify-around mt-[50px] max-sm:gap-[40px]">
+               <div class="flex max-sm:flex-col  justify-around mt-[50px] max-sm:gap-[40px]">
 
 
-                  <div class="card bg-base-100 w-96 shadow-xl">
+                  <div class="card bg-base-100 w-96 shadow-xl max-sm:w-[90vw] max-sm:m-auto">
                       <figure>
                         <img
                           src="./images/others/latest1.png"
@@ -192,7 +192,7 @@
                     </div>
   
   
-                    <div class="card bg-base-100 w-96 shadow-xl">
+                    <div class="card bg-base-100 w-96 shadow-xl max-sm:w-[90vw] max-sm:m-auto">
                       <figure>
                         <img
                           src="./images/others/latest1.png"
@@ -208,7 +208,7 @@
                     </div>
   
   
-                    <div class="card bg-base-100 w-96 shadow-xl">
+                    <div class="card bg-base-100 w-96 shadow-xl max-sm:w-[90vw] max-sm:m-auto">
                       <figure>
                         <img
                           src="./images/others/latest1.png"
